# aoc

./: Cargo.toml
src/: gen.rs  main.rs  problem.rs  site.rs
src/y2015/: d2.rs  d3.rs  d4.rs  d5.rs  d6.rs  mod.rs
src/y2020/: mod.rs
src/y2023/: d1.rs  d10.rs  d11.rs  d12.rs  d13.rs  d14.rs  d15.rs  d16.rs  d17.rs  d18.rs  d19.rs  d2.rs  d20.rs  d21.rs  d22.rs  d23.rs  d3.rs  d4.rs  d5.rs  d6.rs  d7.rs  d8.rs  d9.rs  mod.rs
src/y2024/: d1.rs  mod.rs
